--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,16 @@
 <h1 class='test'>Gohan</h1>
 
-<%= link_to "Log In", new_user_session_path %>
-<%= link_to "Sign Up", new_user_registration_path %>
+<% if !user_signed_in? %>
+    <%= button_to 'Sign In', new_user_session_path %>
+<% else %>
+    <%= button_to 'Log Out', destroy_user_session_path, method: :delete %>
+    <p>Signed in as: <%= @user[:username] %></p>
+    <h2>Posts</h2>
+    <% if @businesses.length > 0 %>
+        <% @businesses.each do |b| %>
+            <p><%= b[:business_name] %> has a <%= b[:business_rating] %> rating.</p>
+        <% end %>
+    <% else %>
+    <p>No businesses on record.</p>
+    <% end %>
+<% end %>
