added test businesses, css changes, added business routes, businesses on index link to respective show page

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,5 +1,11 @@
 // Entry point for your Sass build
-$test-color: purple;
-.test {
-    color: $test-color;
+
+a.index_business {
+    color: initial;
+    text-decoration: none;
+    p {
+        width: fit-content;
+        border: solid 1px black;
+        padding: .2rem;
+    }
 }
