--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @business[:business_name] %></h1>
-
+<%= link_to 'Return to Home Page', root_path %>
 <p><%= @business[:business_city] %></p>
 <p><%= @business[:business_rating] %></p>
