largely css changes, added db seed, split index into partials

--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -8,5 +8,5 @@
     <%= f.text_field :business_city %>
     <%= f.hidden_field :business_votes, value: 0 %>
     <%= f.hidden_field :business_rating, value: 0 %>
-    <%= f.submit %>
+    <%= f.submit 'Add Business' %>
 <% end %>
