--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,9 +1,54 @@
-// Entry point for your Sass build
+$main: #741FF3;
+
+body {
+    background-color: #BECFD3;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    h1, h2 {
+        color: $main;
+        text-decoration: underline;
+    }
+}
+
+#logged_out_div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: fit-content;
+    text-align: center;
+    font-size: x-large;
+    h1 {
+        display: inline;
+    }
+    .logged_out_item {
+        width: fit-content;
+        margin: 1rem auto;
+    }
+    button {
+        border: solid 1px $main;
+        padding: .5rem;
+        border-radius: 15px;
+        width: 10rem;
+        font-size: large;
+        background-color: #F7F1FB;
+    }
+}
+
+#businesses_div {
+    text-align: center;
+    #businesses_list {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    button {
+        margin-top: .5rem;
+    }
+}   
 
 a.index_business {
     color: initial;
     text-decoration: none;
-    p {
+    div {
         width: fit-content;
         border: solid 1px black;
         padding: .2rem;
