--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,8 @@
-<h1 class='test'>Gohan</h1>
-
 <%= flash[:error] ? flash[:error] : nil %>
 <%= flash[:notice] ? flash[:notice] : nil %>
 
 <% if !user_signed_in? %>
-    <%= button_to 'Sign In', new_user_session_path %>
+    <%= render 'logged_out' %>
 <% else %>
-    <%= button_to 'Log Out', destroy_user_session_path, method: :delete %>
-    <p>Signed in as: <%= @user[:username] %></p>
-    <h2>Posts</h2>
-    <%= button_to 'Add New Business', new_business_path, method: :get %>
-    <% if @businesses.length > 0 %>
-        <% @businesses.each do |b| %>
-            <%= link_to business_path(b), class: 'index_business' do %>
-                <p class='index_business'><%= b[:business_name] %> has a <%= b[:business_rating] %> rating.</p>
-            <% end %>
-        <% end %>
-    <% else %>
-    <p>No businesses on record.</p>
-    <% end %>
+    <%= render 'logged_in' %>
 <% end %>
