--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -2,3 +2,5 @@
 <h1><%= @business[:business_name] %></h1>
 <p>City: <%= @business[:business_city] %></p>
 <p><%= @business[:business_rating] %> Rating</p>
+
+<%= button_to 'Leave a Review', new_review_path, method: :get, params: {id: @business[:id]} %>
