added reviews display to business show page, rating not implemented, added test review for display purposes

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -63,3 +63,10 @@ a.index_business {
         padding: .2rem;
     }
 }
+
+.review_div {
+    width: fit-content;
+    padding: .5rem;
+    margin: .5rem;
+    border: 2px solid black;
+}
