prevents user from reviewing business more than once

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -70,3 +70,11 @@ a.index_business {
     margin: .5rem;
     border: 2px solid black;
 }
+
+.review_error {
+    width: fit-content;
+    margin: .1rem;
+    padding: .2rem;
+    border: 2px solid black;
+    color: red;
+}
