--- a/app/views/posts/_logged_out.html.erb
+++ b/app/views/posts/_logged_out.html.erb
@@ -1,5 +1,5 @@
 <div id='logged_out_div'>
         <span>Welcome to </span><h1 class='logged_out_item'>Gohan</h1><span> !</span>
-        <p class='logged_out_item'>Find and leave reviews for your favorite restaurants and shops!</p>
+        <p class='logged_out_item'>Find and write reviews for your favorite restaurants and shops!</p>
         <%= button_to 'Sign In', new_user_session_path %>
 </div>
