updated schema and models so that user and business are related by user_id

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -19,7 +19,7 @@
 <% if @reviews.length > 0 %>
     <% @reviews.each do |review| %>
         <div class='review_div'>
-            <p>Reviewer: <%= review[:reviewer] %></p>
+            <p>Reviewer: <%= review.user[:username] %></p>
             <p>Rating: <%= review[:rating] %></p>
             <p>Review: <%= review[:review] %></p>
         </div>
