--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
-<h1><%= @user[:username] %></h1>
+<h1>User: <%= @user[:username] %></h1>
+
+<h2><%= @user[:username] %>'s Reviews</h2>
+
+<% if @reviews.length > 0 %>
+    <% @reviews.each do |review| %>
+        <div class='review_div'>
+            <p>Business: <%= review.business[:business_name] %></p>
+            <p>Rating: <%= review[:rating] %></p>
+            <p>Review: <%= review[:review] %></p>
+        </div>
+    <% end %>
+<% else %>
+<p>No reviews yet.</p>
+<% end %>
