--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Return to Home Page', root_path %>
+
 <h1>User: <%= @user[:username] %></h1>
 
 <h2><%= @user[:username] %>'s Reviews</h2>
