--- a/app/views/posts/_logged_in.html.erb
+++ b/app/views/posts/_logged_in.html.erb
@@ -20,4 +20,6 @@
         <% end %>
     </div>
     <%= button_to 'Add New Business', new_business_path, method: :get %>
+
+    <%= link_to 'User List', users_path %>
 </div>
