--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -88,3 +88,8 @@ a.index_business {
     text-decoration: underline;
     color: $main;
 }
+
+.search_bar {
+    margin: 1rem auto;
+    width: fit-content;
+}
