--- a/app/views/posts/_logged_in.html.erb
+++ b/app/views/posts/_logged_in.html.erb
@@ -4,6 +4,10 @@
         <p>Signed in as: <%= @user[:username] %></p>
 </div>
 <h2>Businesses</h2>
+<%= form_with method: :get, class: :search_bar do |f| %>
+    <%= f.text_field :search %>
+    <%= f.submit "Search" %>
+<% end %>
 <div id='businesses_div'>
     <div id='businesses_list'>
         <% if @businesses.length > 0 %>
