--- a/app/views/posts/_logged_in.html.erb
+++ b/app/views/posts/_logged_in.html.erb
@@ -20,7 +20,7 @@
                 <% end %>
             <% end %>
         <% else %>
-        <p>No businesses on record.</p>
+        <p>No businesses found.</p>
         <% end %>
     </div>
     <%= button_to 'Add New Business', new_business_path, method: :get %>
